# veil

./: .gitignore  CMakeLists.txt  README.md
arch/x86_64/: flags.cmake
arch/x86_64/pc/: flags.cmake  layout.ld
arch/x86_64/pc/boot/: crti.asm  crtn.asm  header.asm  idt.asm  main.asm  main64.asm
arch/x86_64/pc/io/: io_operations.cpp
arch/x86_64/pc/serial/: serial.cpp
arch/x86_64/pc/terminal/: tty.cpp  vga.hpp
include/veil/: io.hpp  serial.hpp  tty.hpp
src/: kernel.cpp
